# ParseC

./: CMakeLists.txt
include/parsec/: parsec.h
src/: CMakeLists.txt  main.c  parsec.c  utf8.c  utf8.h
